# Research-Assistant

./: .env.example  .gitignore  LICENSE  README.md  commit.txt  docker-compose.yml  pyproject.toml  test_imports.py
data/: document_metadata.json
docs/: DOCLING_EXTRACTION.md
frontend/: README.md  index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: ChatView.tsx  Markdown.tsx  MessageSources.tsx  SettingsPanel.tsx  Sidebar.tsx  SourcesPanel.tsx
frontend/src/components/ui/: Card.tsx  Pill.tsx
frontend/src/hooks/: useChatSession.ts  useConversations.ts  useIngest.ts
frontend/src/lib/: api.ts  format.ts  sse.ts
scripts/: check_config.py  check_logging.py  deep_inspect_docchunk.py  inspect_chunker_api.py  inspect_chunks.py  inspect_docling.py  inspect_docling_api.py  inspect_docmeta_api.py  test_embeddings.py
src/: main.py
src/rag_app/: main.py
src/rag_app/api/: chat.py  documents.py  ingest.py  settings.py
src/rag_app/core/: config.py  logging_config.py  sse.py
src/rag_app/models/: chat.py  documents.py  settings.py
src/rag_app/providers/: embeddings.py  llm.py  qdrant_client.py  sparse_embeddings.py
src/rag_app/repositories/: vector_repository.py
src/rag_app/services/: app_settings_service.py  chat_service.py  docling_chunker.py  docling_extractor.py  document_metadata_service.py  indexing_service.py  ingest_service.py  run_chunking.py  run_indexing.py
tests/: conftest.py  test_app_settings_service.py  test_chat_integration.py  test_chat_service.py  test_docling_llamaindex_pipeline.py  test_document_metadata_service.py  test_hybrid_search_integration.py  test_indexing_service.py  test_ingest_service.py  test_llm_provider.py  test_vector_repository.py
