[project]
name = "rag-scientific-papers"
version = "0.1.0"
description = "Sistema RAG para análisis y síntesis de papers científicos"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    # Docling para parseo estructurado de PDFs y chunking
    "docling>=2.0.0",
    "docling-core>=2.0.0",
    # sentence-transformers para embeddings locales (BAAI/bge-m3)
    "sentence-transformers>=3.0.0",
    # Qdrant para vector store (se agregará en Fase 2)
    # "qdrant-client>=1.11.0",
    "qdrant-client>=1.11.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.7.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rag_app"]
