[project]
name = "rag-scientific-papers"
version = "0.1.0"
description = "Sistema RAG para análisis y síntesis de papers científicos"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.12",  # requerido por FastAPI para UploadFile
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "docling>=2.0.0",
    "docling-core>=2.0.0",
    "sentence-transformers>=3.0.0",
    "qdrant-client>=1.11.0",
    "fastembed>=0.8.0",
    "google-genai>=2.14.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.7.0",
]

[tool.pytest.ini_options]
markers = [
    "integration: tests that load real ML models (dense + sparse embeddings) instead of mocks",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rag_app"]
